fix moon taking up too much space

--- a/_sass/minima/_moon.scss
+++ b/_sass/minima/_moon.scss
@@ -1,7 +1,12 @@
 $size: 70vmin;
 
+.ground {
+  width: 100%;
+}
+
 .moonbox {
   background: #22354f;
+  box-shadow: inset -1px -1px 0px #fff;
 }
 
 .moon {
